pkgdatadir = $(datadir)/@PACKAGE@/zfs-tests/tests/functional/mmp
dist_pkgdata_SCRIPTS = \
	mmp_on_thread.ksh \
	mmp_on_off.ksh \
	mmp_hostid_import.ksh \
	mmp_interval.ksh \
	mmp_on_active_import.ksh \
	mmp_on_inactive_import.ksh \
	mmp_on_exported_import.ksh \
	mmp_on_uberblocks.ksh \
	setup.ksh \
	cleanup.ksh \
	mmp.kshlib \
	mmp.cfg
